--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,13 @@
 
+
+.bigCounter div{
+    display: inline-block;
+    font-size: 60px;
+    line-height: 60px;
+    background: #101010;
+    color: white;
+    padding: 10px;
+}
 /* 
 
     You can write your own styles here...
@@ -8,5 +17,7 @@
     other sylesheets into your bunde as well, e.j:
     
     import 'relative/path/to/stylesheet.scss';
+
+    @import "~bootstrap/scss/bootstrap.scss";
 
 */
